--- a/MyPetShop/Views/Account/Register.cshtml
+++ b/MyPetShop/Views/Account/Register.cshtml
@@ -1,41 +1,53 @@
 ﻿@model MyPetShop.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<section class="header_text sub">
+    <h4><span>Register new account</span></h4>
+</section>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-}
+<section class="main-content">				
+    <div class="row">
+        <div class="span5" style="padding-left: 30px">					
+            <h4 class="title"><span class="text"><strong>Register</strong> Form</span></h4>
+            
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <input type="hidden" name="next" value="/">
+                <fieldset>                   
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="control-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                        <div class="controls">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "input-xlarge", @placeholder = "email@example.com" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    
+                    <div class="control-group">
+                        @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                        <div class="controls">
+                            @Html.PasswordFor(m => m.Password, new { @class = "input-xlarge", @placeholder = "enter your password" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                    <div class="control-group">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                        <div class="controls">
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "input-xlarge", @placeholder = "confirm your password" })
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <input tabindex="3" type="submit" value="Register" class="btn btn-inverse large" />
+                    </div>
+                </fieldset>
+            }
+
+        </div>
+    </div>
+</section>
