--- a/MyPetShop/Views/Shared/_LayoutUser.cshtml
+++ b/MyPetShop/Views/Shared/_LayoutUser.cshtml
@@ -44,12 +44,7 @@
             </div>
             <div class="span8">
                 <div class="account pull-right">
-                    <ul class="user-menu">
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="cart.html">Your Cart</a></li>
-                        <li><a href="checkout.html">Checkout</a></li>
-                        <li><a href="@Url.Action("Login", "Account")">Login</a></li>
-                    </ul>
+                    @Html.Partial("_LoginPartial")
                 </div>
             </div>
         </div>
